--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,5 +22,6 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "pyright>=1.1.408",
+    "pytest>=9.0.2",
     "ruff>=0.15.0",
 ]
